<resources>
    <string name="app_name">tarasovartem3</string>
    <string name="name">Государственное бюджетное профессиональное образовательное учреждение</string>
    <string name="data">11 августа в 20:15</string>
    <string name="info">ГБПОУ ВО «БТПИТ» образовано в соответствии с  постановлением правительства Воронежской области от 20 мая 2015 года № 401 в результате реорганизации в  форме слияния государственного образовательного бюджетного учреждения среднего профессионального образования Воронежской области «Борисоглебский индустриальный техникум», государственного образовательного бюджетного учреждения среднего профессионального образования Воронежской области «Борисоглебский техникум информатики и вычислительной техники» и государственного образовательного бюджетного учреждения начального профессионального образования Воронежской области «Профессиональное училище № 34 г. Борисоглебска», зарегистрировано в качестве юридического лица 11 сентября 2015 г.</string>
    <string name="info2">ГБПОУ ВО «БТПИТ» образовано в соответствии с  постановлением правительства Воронежской области от 20 мая 2015 года № 401 в результате реорганизации в  форме слияния государственного образовательного бюджетного учреждения среднего профессионального образования Воронежской области «Борисоглебский индустриальный техникум», \nhttps://btpit36.ru/</string>
    <string name="like">50\n</string>
    <string name="comm">5</string>
    <string name="views">12,1K</string>
    <string name="remove">Удалить\n</string>
    <string name="edit">Редактировать\n</string>
    <string name="post_text">Введите ваш пост\n</string>
    <string name="error_empty_content">Ошибка\n</string>
    <string name="share">Поделиться\n</string>
    <string name="postdeli">Поделиться постому\n</string>
    <string name="play">Включить</string>
    <string name="save111">Сохранить\n</string>
    <string name="save_dan">Отправить</string>
    <string name="cancel">Отменить</string>
</resources>