<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/author"
        android:layout_width="272dp"
        android:layout_height="0dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="463dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="#757575"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toStartOf="@+id/tri"
        app:layout_constraintHorizontal_bias="0.868"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/published"
        android:layout_width="272dp"
        android:layout_height="19dp"
        android:layout_marginStart="78dp"
        android:layout_marginEnd="4dp"
        android:text="@string/data"
        android:textColor="#757575"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/tri"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="77dp"
        android:layout_height="77dp"
        android:layout_marginBottom="23dp"
        app:layout_constraintBottom_toTopOf="@+id/content"
        app:layout_constraintEnd_toStartOf="@+id/author"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <ImageView
        android:id="@+id/tri"
        android:layout_width="44dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/published"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_foreground" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="author,published,imageView2"
        tools:ignore="UnknownId" />

    <TextView
        android:id="@+id/content"
        android:layout_width="349dp"
        android:layout_height="162dp"
        android:layout_marginTop="100dp"
        android:autoLink="web"
        android:text="@string/info2"
        android:textColor="#757575"
        android:textColorLink="#03D9C4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/video"
        android:layout_width="345dp"
        android:layout_height="179dp"
        android:layout_margin="@dimen/video"
        android:layout_marginTop="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content"
        app:layout_constraintVertical_bias="0.018"
        app:srcCompat="@drawable/fon" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="224dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.882"
        app:layout_constraintStart_toStartOf="@+id/podelytsya"
        app:layout_constraintTop_toBottomOf="@+id/video"
        app:srcCompat="@android:drawable/ic_menu_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        style="@style/Widget.AppTheme.IconButton"
        android:layout_width="37dp"
        android:layout_height="35dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="10dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#00FDF6FE"
        android:contentDescription="@string/share"
        app:icon="@drawable/ic_share_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/like"
        app:layout_constraintTop_toBottomOf="@+id/video"
        app:layout_constraintVertical_bias="0.0"
        tools:checked="true"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/video"
        android:backgroundTint="#FFFFFF"
        android:contentDescription="@string/play"
        android:tint="#FF0000"
        app:layout_constraintBottom_toBottomOf="@+id/video"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/video"
        app:srcCompat="@android:drawable/ic_media_play" />

    <TextView
        android:id="@+id/nrav"
        android:layout_width="22dp"
        android:layout_height="17dp"
        android:layout_marginTop="20dp"
        android:textColor="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/share"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toEndOf="@+id/like"
        app:layout_constraintTop_toBottomOf="@+id/video"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/podelytsya"
        android:layout_width="22dp"
        android:layout_height="19dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/comm"
        android:textColor="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/share"
        app:layout_constraintTop_toBottomOf="@+id/video"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="228dp"
        android:text="@string/views"
        android:textColor="#757575"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toBottomOf="@+id/author" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="9dp"
        android:background="#00FFFFFF"
        android:backgroundTint="#FDF6FE"
        android:checkable="true"
        android:contentDescription="@string/like"
        app:icon="@drawable/ic_like_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/video"
        app:layout_constraintVertical_bias="0.004"
        tools:ignore="MissingConstraints,TouchTargetSizeCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>